name: merus
version: 0.1.0.0
synopsis: Impulse 2D physics library in Haskell
-- description: 
-- homepage:
license: MIT
license-file: LICENSE
author: Joe Vargas
-- maintainer:
copyright: (c) 2015
category: Game
build-type: Simple
cabal-version: >=1.10

flag demo
    description: Build Demo
    default: False

library
    exposed-modules:
        Merus
        Merus.Types
        Merus.Aabb
        Merus.Body
        Merus.Collision
        Merus.Manifold
        Merus.Shape
        Merus.World
    other-modules: 
        Merus.Math
    default-extensions:
        RecordWildCards
        TemplateHaskell
        KindSignatures
        Rank2Types
        MultiWayIf
    build-depends:
        base,
        vector,
        lens,
        linear,
        containers,
        mtl
    hs-source-dirs: src
    default-language: Haskell2010

test-suite spec
    type: exitcode-stdio-1.0
    ghc-options: -Wall
    hs-source-dirs: test
    main-is: Spec.hs
    --other-modules:
    build-depends:
        base >=4.7 && <5,
        hspec-core,
        hspec,
        directory,
        stringbuilder,
        hspec-meta >= 2.1.5

executable demo
    main-is: Main.hs
    default-extensions:
        RecordWildCards
        TemplateHaskell
        KindSignatures
        OverloadedStrings
        LambdaCase
        Rank2Types
        MultiWayIf
    if flag(demo)
        build-depends:
            base,
            vector,
            containers,
            sdl2,
            transformers,
            lens,
            linear,
            StateVar,
            data-default,
            mtl,
            merus
    else
        buildable: False
    hs-source-dirs: demo
    default-language: Haskell2010
